# UstaGo-bot

./: .env  .env.example  .gitignore  DEPLOY.md  FAQ.md  README.md  UstaGo_Marketing_Content.md  deploy.sh  fix_db.py  main.py  pyproject.toml  seed_db.py  tmp_migrate.py
admin_api/: backups.py  main.py
admin_frontend/: package-lock.json  package.json
alembic/: env.py
alembic/versions/: 0a66c9541bde_add_phone_number_to_user.py  0c6d3d3b47ee_add_free_orders_enabled_to_settings.py  2cb7e3278834_fully_expand_schema.py  2e36c38e6165_init_v2.py  4d2e1a3b5c7d_add_admin_logs.py  8fb00ac9bd10_add_hashed_password_to_users.py  a1c05651093a_add_experience_to_master.py  b4cd72a02cd4_add_message_to_bids.py  f394c01eac32_init.py
backups/: backup_20260415_104416.json  backup_20260415_104528.json  backup_20260415_111358.json  backup_20260415_111608.json  backup_20260415_115655.json  backup_20260415_115743.json  backup_20260415_115811.json  backup_20260415_132736.json  backup_20260415_181613.json
bot/: states.py
bot/core/: config.py  constants.py
bot/handlers/: admin.py  client_cabinet.py  client_order.py  faq.py  master_account.py  payments.py  registration.py  start.py  support.py
bot/keyboards/: admin.py  client.py  faq.py  master.py  registration.py
bot/middlewares/: ban_check.py  logging.py  support_chat.py
bot/utils/: faq_manager.py
database/: engine.py  models.py
scratch/: reset_password.py  test_auth.py  test_faq.py
scripts/: backup.sh  migrate.sh  reset_db.py  set_admin.py  setup.sh  update.sh
tests/: test_finance.py
tmp/: fix_db.py
(+15 files in other folders)
